# mx

./: .gitignore  Cargo.toml  Cross.toml  DESIGN.md  ENGAGE_TEST.md  LICENSE  README.md  history.txt  test_soren_schema.rs
.github/workflows/: auto-release.yml  follow-the-white-rabbit.yml  knock-knock.yml  pr-checks.yml  release.yml  the-matrix-has-you.yml  wake-up.yml
schema/: surrealdb-schema.surql
schemas/: example-crewu.toml  example-q-state.json  example-soren-state.json
src/: codex.rs  commit.rs  content_ops.rs  convert.rs  db.rs  doctor.rs  embeddings.rs  engage.rs  github.rs  index.rs  knowledge.rs  main.rs  paths.rs  schema.sql  session.rs  state.rs  store.rs  surreal_db.rs  sync.rs  tensor.rs  types.rs  wake_ritual.rs  wake_token.rs
src/migrations/: v2_to_v3.sql  v3_to_v4.sql  v4_to_v5.sql
src/sync/: mod.rs  wiki.rs
src/sync/commands/: issues.rs  labels.rs  mod.rs  pull.rs  push.rs
src/sync/github/: app_auth.rs  auth.rs  graphql.rs  mod.rs  rest.rs
src/sync/merge/: diff.rs  labels.rs  mod.rs  resolve.rs
src/sync/yaml/: mod.rs  schema.rs  store.rs
