[package]
name = "mx"
version = "0.1.1"
edition = "2021"
description = "Matrix CLI - Knowledge indexing and task management"
authors = ["Cory Zibell <cory@zibell.cloud>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/coryzibell/mx"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# File system
walkdir = "2"
notify = "6"

# Hashing for IDs
blake3 = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Markdown parsing
pulldown-cmark = "0.12"

# Paths
dirs = "5"

# Random
rand = "0.9"

[[bin]]
name = "mx"
path = "src/main.rs"
