[package]
name = "mx"
version = "0.1.42"
edition = "2024"
description = "Matrix CLI - Knowledge indexing and task management"
authors = ["Cory Zibell <cory@zibell.cloud>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/coryzibell/mx"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# SQLite
rusqlite = { version = "0.37", features = ["bundled"] }

# SurrealDB
surrealdb = { version = "2", features = ["kv-surrealkv"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# File system
walkdir = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Paths
dirs = "6"

# Random
rand = "0.9"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Cryptography for wake token signing
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# base-d library (includes compression support)
base-d = "3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
urlencoding = "2"
regex = "1.12.2"

# JWT for GitHub App auth
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
pem = "3"
lazy_static = "1"

# Temporary directories
tempfile = "3"

# Terminal colors and TTY detection
colored = "2"
atty = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
surrealdb = []

[[bin]]
name = "mx"
path = "src/main.rs"
